apps/kinetiq-backend/overlays/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kinetiq-backend
  namespace: kinetiq-backend-develop
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: api.develop.kinetiq.scesi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kinetiq-backend
                port:
                  number: 80
  tls:
    - hosts:
        - api.develop.kinetiq.scesi.dev
      secretName: kinetiq-backend-develop-tls-secret
